2003-02-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_play_pause), (totem_playing_dvd),
	(totem_action_seek_relative), (totem_action_volume_relative),
	(update_seekable): some style changes, fix compilation, go to bed

2003-02-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_set_mrl), (totem_action_previous),
	(totem_action_next), (update_seekable), (update_cb_rare),
	(update_buttons): update the menu items for seekable as well

2003-02-02  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_has_previous_mrl),
	(gtk_playlist_has_next_mrl), (gtk_playlist_set_previous),
	(gtk_playlist_set_next), (gtk_playlist_set_at_end):
	* src/totem.c: (totem_action_previous), (totem_action_next),
	(on_eos_event), (update_buttons): implement the Previous button in
	Repeat mode (goes to the end of the playlist) (Partly based on a patch
	by Julien Moutte <julien@moutte.net>) (Closes: #104725)

2003-02-01  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-cd-selection.c: (bacon_cd_selection_finalize):
	* src/cd-drive.c: (cd_drive_free):
	* src/cd-drive.h:
	* src/egg-recent-model.c: (egg_recent_model_read): fix memleaks by
	updating from libegg and libbacon

2003-02-01  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_expose), (gtk_xine_open): free the expose
	event, removed an extraneous assignement for the mrl (Inspired by a
	patch from xan <xan@dimensis.com>)

2003-02-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): fix properties' window icon

2003-02-01  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: removed -export-dynamic (not needed)
	* src/gtk-message.c:
	* src/gtk-message.h: removed, we'll use something else
	* src/totem.c: (totem_action_exit), (main): upd for gtk-message.[ch]'s
	removal

2003-02-01  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: add the window icon
	* src/gtk-xine.c: (gtk_xine_get_current_frame): fix screenshot when
	ratio is 1.0
