@@ -1,5 +1,11 @@
 2003-02-02  Bastien Nocera  <hadess@hadess.net>
 
+	* src/gtk-xine.c: (gtk_xine_set_fullscreen): use the monitor's
+	geometry, not the full display's to show the fullscreen window
+	(Should close #101149)
+
+2003-02-02  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem.c: (totem_action_play_pause), (totem_playing_dvd),
 	(totem_action_seek_relative), (totem_action_volume_relative),
 	(update_seekable): some style changes, fix compilation, go to bed
